# desertas

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION.txt  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALLATION.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  _headers  _redirects  docker-compose.yml  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sites.js  test_dashboard.json  upload_desertas.py
dashboard/: README.md  data_2026-02-28.json  data_latest.json
docs/: DESERTAS_Research_Paper.docx
reports/: README.md  generate_alert_report.py  generate_daily_report.py
reports/daily/: COMPREHENSIVE_DAILY_REPORT_2026-02-28.txt  DES-AU-06_2026-02-28.md  DES-AU-06_2026-02-28.txt  DES-CL-03_2026-02-28.md  DES-CL-03_2026-02-28.txt  DES-KA-04_2026-02-28.md  DES-KA-04_2026-02-28.txt  DES-MA-02_2026-02-28.md  DES-MA-02_2026-02-28.txt  DES-SA-01_2026-02-28.md  DES-SA-01_2026-02-28.txt  DES-SC-01_2026-02-28.md  DES-SC-01_2026-02-28.txt  DES-TA-02_2026-02-28.md  DES-TA-02_2026-02-28.txt  SUMMARY_2026-02-28.md
reports/json/: DES-AU-06_2026-02-28.json  DES-CL-03_2026-02-28.json  DES-KA-04_2026-02-28.json  DES-MA-02_2026-02-28.json  DES-SA-01_2026-02-28.json  DES-SC-01_2026-02-28.json  DES-TA-02_2026-02-28.json  dashboard_20260228.json  integrated_dashboard.json
scripts/: analyze_results.py  export_dashboard.py  generate_alerts.py  generate_comprehensive_report.py  generate_daily_reports.py  ingest_station_data.py  merge_reports.py  run_all_pipeline.py  run_drgis_batch.py
src/ai/: cnn_spatial.py  ensemble.py  lstm_detector.py  xgboost_classifier.py
src/desertas/: __init__.py
src/desertas/cli/: main.py
src/detection/: bayesian_detector.py  precursor_sequencer.py  spatial_coherence.py
src/drgis/: alert_classifier.py  composite.py  normalization.py
src/drgis/parameters/: beta_dust.py  delta_phi_th.py  gamma_geo.py  he_ratio.py  omega_arid.py  psi_crack.py  rn_pulse.py  s_yield.py
src/preprocessing/: background_modeling.py  dust_correction.py  harmonic_regression.py
tests/: requirements-test.txt  run_tests.py
tests/hypothesis/: test_hypotheses.py  test_hypotheses_simple.py
tests/unit/test_ai/: test_ensemble.py  test_ensemble_simple.py
tests/unit/test_drgis/: test_composite.py  test_composite_simple.py
tests/unit/test_parameters/: test_delta_phi_th.py  test_delta_phi_th_simple.py
