# 🏜️ DESERTAS setup.cfg
# Desert Emission Sensing & Energetic Rock-Tectonic Analysis System

[metadata]
name = desertas
version = 1.0.0
url = https://desertas.netlify.app
project_urls =
    Documentation = https://desertas.readthedocs.io
    Source = https://gitlab.com/gitdeeper4/desertas
    GitHub = https://github.com/gitdeeper4/desertas
    Bug Tracker = https://gitlab.com/gitdeeper4/desertas/-/issues
    DOI = https://doi.org/10.14293/DESERTAS.2026.001
    API = https://desertas.netlify.app/api
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = DESERTAS: Desert Emission Sensing & Energetic Rock-Tectonic Analysis System
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    geogas,
    radon-precursors,
    tectonic-breathing,
    arid-craton,
    fissure-conductivity,
    helium-4,
    diurnal-thermal-flux,
    desert-geochemistry,
    seismic-forecasting,
    continental-shields,
    earthquake-prediction,
    machine-learning,
    geophysics,
    geochemistry,
    tectonics
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Geology
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    pandas>=1.3.0
    xarray>=2022.3.0
    scikit-learn>=1.0.0
    xgboost>=1.6.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    plotly>=5.5.0
    obspy>=1.3.0
    pyyaml>=5.4.0
    click>=8.0.0
    python-dotenv>=0.19.0

[options.packages.find]
where = src
exclude =
    tests
    docs
    examples
    notebooks
    scripts

[options.extras_require]
ml =
    tensorflow>=2.8.0
    torch>=1.10.0
    pytorch-lightning>=1.6.0
viz =
    streamlit>=1.15.0
    plotly>=5.5.0
    dash>=2.0.0
web =
    flask>=2.0.0
    flask-cors>=3.0.0
    flask-restful>=0.3.9
    fastapi>=0.85.0
    uvicorn>=0.18.0
    gunicorn>=20.1.0
geo =
    geopandas>=0.10.0
    shapely>=1.8.0
    rasterio>=1.3.0
    pyproj>=3.3.0
field =
    pyserial>=3.5
    pymodbus>=3.0.0
    minimalmodbus>=2.0.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    ruff>=0.0.260
    mypy>=0.990
    pre-commit>=2.20.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0
all =
    %(ml)s
    %(viz)s
    %(web)s
    %(geo)s
    %(field)s
    %(dev)s

[options.entry_points]
console_scripts =
    desertas = desertas.cli.main:cli

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
strict_optional = True

[coverage:run]
source = desertas
omit = */tests/*,*/test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError

[aliases]
test = pytest

# 🏜️ The desert breathes. DESERTAS decodes.
